# trspo1

./: .clang-format  .gitignore  CMakeLists.txt  README.md  hook_manager.cpp  hook_manager.hpp  injector.cpp  main.cpp  patch.cpp  patch.hpp
src/: hook.asm  hook.cpp  hook.hpp  hook_dll.cpp  hook_manager.cpp  hook_manager.hpp  injector.cpp  main.cpp  patch.cpp  patch.hpp
src/common/include/: io.h  proto.h  tcp.h
src/common/internal/: tcp_unix.cpp  tcp_win.cpp
src/hook/: dllmain.cpp  setup.cpp  setup.h  shared_init.cpp
src/hook/hooks/: common.asm  common.h  common.s  filter.cpp  filter.h  filter_unix.cpp  logger.cpp  logger.h  logger_unix.cpp  tcp_logger.cpp  tcp_logger.h  tcp_logger_unix.cpp
src/hook/manager/: manager.cpp  manager.h  utils.h  utils_unix.cpp  utils_win.cpp
src/hook/patch/: common.h  patch.cpp  patch.h  patch_unix.cpp  patch_win.cpp
src/injector/: injector.cpp  injector.hpp  utils.h  utils_unix.cpp  utils_win.cpp
test/: patch_test.cpp  patch_test_unix.cpp  test.cpp  test_unix.cpp
